fix: 소나큐브 Maintainability Medium 증상 일부 해결